# semantos-discipline

./: .gitignore  README.md  discipline.yaml
01-Methodology/: evidence-rules.md
02-Source-Map/: source-map.md
04-Data/: corpus-manifest.json  source-authority.json
05-Scripts/: continue-multirun-after-methodology.sh  launch-next-parallel-wave.sh  resume-architecture-deep.sh  run-multirun-discipline.sh  run-stage-auto-resume.sh
05-Scripts/stage-prompts/: developer-workflows.md  formal-methods.md  pitfalls.md  protocols-security.md  routing-hints.md  runtime.md  storage-data.md
07-Out-Reports/multirun-20260613-134232/prompts/: methodology.md
07-Out-Reports/multirun-20260613-1515-continued/prompts/: architecture.md  runtime.md
Sources/: code-first-snapshots
artifacts/: pitfalls-checklists.md  semantos-discipline-report.md
runs/20260613-002918/: goal.txt  launch-after-embed.sh  qmd-smoke.json  resume-command.sh  run-command.sh
runs/20260613-120324-code-first/: final.report.md  goal.txt  run-code-first.sh
sources-code/: evening-review-2026-05-10.md  package-lock.json.md  pnpm-lock.yaml.md  pnpm-workspace.yaml.md  poker-check.tsconfig.json.md  tsconfig.json.md
sources-code/.github/workflows/: build-all-targets.yml.md  forbidden-tokens.yml.md  release.yml.md
sources-code/.semantos/memory/: semantos_brain_rename.md
sources-code/apps/loom-svelte/: svelte.config.js.md
sources-code/apps/oddjobtodd/: package.json.md  vite.config.ts.md
sources-code/apps/semantos/: PWA-WASM-BUILD.md  analysis_options.yaml.md
sources-code/cartridges/bsv-anchor-bundle/: cartridge.json.md
sources-code/cartridges/inference-gate/: api-worker.ts.md  audit-handler.ts.md  cell-handler.ts.md  deploy-model-to-pis.sh.md  inference-coordinator.ts.md  mic-to-cell.ts.md  yolo-to-cell.ts.md
sources-code/cartridges/ixp-routing/: carrier-billing-demo.ts.md
sources-code/cartridges/mnca/: cartridge.json.md
sources-code/cartridges/scg/: cartridge.json.md
sources-code/cartridges/tessera/: cartridge.json.md
sources-code/cartridges/test_fixture/: cartridge.json.md
sources-code/cartridges/wallet-headers/: cartridge.json.md
sources-code/include/: semantos.h.md
sources-code/proofs/: compliance-matrix.json.md
sources-code/scripts/: anchor-demo.ts.md  build-ios.sh.md  bulk-ratify-pending.ts.md  cleanup-to-main.sh.md  conv-send-smoke.sh.md  demo-md-branch-merge.sh.md  dogfood-up.sh.md  fix-stale-test-imports.ts.md  forbidden-tokens.mjs.md  oddjobz-backfill-message-patches.ts.md  oddjobz-backfill-meta-conversations.ts.md  phase2-conversations-demo.ts.md  poker-p2p.ts.md  prepare-poker-pr.sh.md  prepare-pr.sh.md  pwa-v1-smoke.sh.md  rename-facet-to-hat.ts.md  smoke-test-mobile.sh.md  wallet-diag.ts.md
sources-code/src/: index.ts.md
sources-code/systemd/: semantos-node.service.md
sources/Sources/local/semantos-core-repo/2026-06-13/esp32-hackkit/components/cell-mesh/: CMakeLists.txt
sources/Sources/local/semantos-core-repo/2026-06-13/esp32-hackkit/components/cell-mesh/include/: cell_forward.h.md  cell_forward_v1.h.md  cell_frame.h.md  cell_meter.h.md  cell_mnca.h.md  cell_sig.h.md  cell_wire.h.md
sources/Sources/local/semantos-core-repo/2026-06-13/esp32-hackkit/components/cell-mesh/src/: cell_capability.c.md  cell_forward.c.md  cell_meter.c.md  cell_wire.c.md
sources/Sources/local/semantos-core-repo/2026-06-13/esp32-hackkit/components/cell-mesh/test/: test_cell_capability.c.md  test_cell_forward.c.md  test_cell_forward_v1.c.md  test_cell_frame.c.md  test_cell_ring.c.md  test_cell_wire.c.md
sources/Sources/local/semantos-core-repo/2026-06-13/esp32-hackkit/components/semantos/: CMakeLists.txt  idf_component.yml.md
sources/Sources/local/semantos-core-repo/2026-06-13/esp32-hackkit/components/semantos/include/: semantos_adapters.h.md  semantos_internal.h.md
sources/Sources/local/semantos-core-repo/2026-06-13/esp32-hackkit/components/semantos/src/: host_utility.c.md  runtime_wamr.c.md  semantos.c.md
sources/Sources/local/semantos-core-repo/2026-06-13/esp32-hackkit/examples/hello_cell/main/: CMakeLists.txt
sources/Sources/local/semantos-core-repo/2026-06-13/esp32-hackkit/examples/mesh_demo/main/: CMakeLists.txt  idf_component.yml.md
sources/Sources/local/semantos-core-repo/2026-06-13/esp32-hackkit/examples/piggybank/main/: CMakeLists.txt
state/: parallel-multirun-root.txt  source-revision.json
(+5057 files in other folders)
