---
source_path: /home/jake/.edwinpai/disciplines/semantos/state/semantos-core-repo/esp32-hackkit/examples/hello_cell/main/CMakeLists.txt
source_type: folder
memory_type: semantic_memory
ingested_at: 2026-06-13T06:27:17.622971+00:00
---

idf_component_register(
    SRCS "main.c"
    INCLUDE_DIRS "."
    REQUIRES semantos
)
